--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     ]
   },
   "dependencies": {
+    "@headlessui/react": "1.6.4",
+    "@heroicons/react": "1.0.6",
     "@prisma/client": "latest",
     "autoprefixer": "10",
     "blitz": "0.39.0",
@@ -32,7 +34,11 @@
     "react": "alpha",
     "react-dom": "alpha",
     "react-final-form": "6.5.3",
-    "tailwindcss": "2.1.2",
+    "react-icons": "4.4.0",
+    "tailwindcss": "3.1.5",
+    "theme-change": "2.0.2",
+    "daisyui": "2.15.2",
+    "react-spinners": "0.12.0",
     "zod": "3.7.3"
   },
   "devDependencies": {
