--- a/package.json
+++ b/package.json
@@ -29,23 +29,24 @@
     "@prisma/client": "latest",
     "autoprefixer": "10.4.7",
     "blitz": "0.45.4",
+    "daisyui": "2.19.0",
     "final-form": "4.20.7",
-    "postcss": "8",
     "plyr-react": "5.0.2",
+    "postcss": "8",
     "react": "alpha",
     "react-dom": "alpha",
     "react-final-form": "6.5.9",
     "react-icons": "4.4.0",
-    "tailwindcss": "3.1.5",
-    "theme-change": "2.1.0",
-    "daisyui": "2.19.0",
     "react-spinners": "0.13.3",
+    "source-map-resolve": "0.6.0",
+    "tailwindcss": "3.1.6",
+    "theme-change": "2.1.0",
     "zod": "3.17.3"
   },
   "devDependencies": {
     "@types/preview-email": "2.0.1",
     "@types/react": "17.0.19",
-    "eslint": "7.32.0",
+    "eslint": "8",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
     "prettier": "2.7.1",
